virements routes and fix yaml tiers and virements.js
